k3s-ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-ui
  namespace: fabric
  labels:
    app: k3s-ui
spec:
  selector:
    app: k3s-ui
  ports:
    - port: 80
      targetPort: http
      name: http
